# fsmt.experiments

cca-lwr-testing-nightly/: CMakeLists.txt  cca-lwr-nightly.scxml  cca-lwr-testing-nightly.ini  cca-lwr-testing-nightly.scxml
cca-lwr-testing-nightly/tools/: cca_lwr_controller_script  cca_lwr_logger
csra-network-performance-nightly/: CMakeLists.txt  csra-network-performance-nightly.ini  csra-network-performance-nightly.scxml
csra-network-performance-nightly/tools/: fsmt_environment.sh
flobi-faceid-nightly/: CMakeLists.txt  flobi-faceid.ini  flobi-faceid.scxml
flobi-faceid-nightly/reference-data/: left_arm.dump
flobi-faceid-nightly/tools/: flobi-faceid-staticresult.py
icub-humanoids/: CMakeLists.txt  icub-humanoids-balltracking.ini  icub-humanoids-balltracking.scxml
icub-humanoids/tools/: icub-data-set-player-rpc.py  icub-humanoids-jointpos.py  icub-humanoids-scope.xml  icub-humanoids.env  icub-plot-left-arm.sh  icub-plot-right-arm.sh  icub-yarp-connect.sh  icub-yarp-dump-left-arm.sh  icub-yarp-dump-right-arm.sh
icub-main-nightly/: CMakeLists.txt  icub-nightly-simple-motor-control.ini
icub-nightly/: CMakeLists.txt  icub-nightly-balltracking-profile.ini  icub-nightly-balltracking.ini  icub-nightly-balltracking.scxml  icub-nightly-simple-motor-control.ini  icub-nightly-smc.ini  icub-nightly-smc.scxml
icub-nightly/reference-data/: right_arm.dump
icub-nightly/tools/: icub-csv-angle-compare.py  icub-data-set-player-rpc.py  icub-nightly-jointpos.py  icub-nightly-scope.xml  icub-nightly-smc.py  icub-nightly.env  icub-plot-left-arm.sh  icub-plot-right-arm.sh  icub-realtime-plot.py  icub-yarp-connect.sh  icub-yarp-dump-left-arm.sh  icub-yarp-dump-right-arm.sh  operf_script.bash
lsp-csra-nightly/: CMakeLists.txt  lsp-csra-nightly-flobimoves.ini  lsp-csra-nightly-flobimoves.scxml
morse-CNM-1.2.1/: CMakeLists.txt  morse-CNM-1.2.1.ini  morse-CNM-1.2.1.scxml
morse-CNM-1.2.1/tools/: assess_cat_log.sh  cat_mouse_game.py  cat_script.py  mouse_script.py
morse-find-human-1.2/: CMakeLists.txt  hri-morse-find-scenario.ini  hri-morse-find-scenario.scxml
morse-find-human-1.2/tools/: hri-check-position.py  hri-clean-logs.sh  hri-gplot.sh  hri-morse-find-scenario.py  hri-start-human-service.py  hri-start-human-waypoint.py  hri-start-robot-ros.py  hri-start-waypoint.py
oncilla-sim-0.2/: CMakeLists.txt  oncilla-sim-0.2-trajactory.ini  oncilla-sim-0.2-trajactory.scxml
oncilla-sim-0.2/tools/: grapher-sine.py  onc-sim0.2-grapher-sine.py  onc-sim0.2-plot-sine.sh  plot-sine.sh
reem-grasping-simulation-profile/: reem-grasping-simulation-profile.ini
reem-patrolling-simulation-profile/: reem-patrolling-simulation.ini
strands-patrolling-simulation-nightly/: CMakeLists.txt  strands-patrolling-simulation-nightly.ini  strands-patrolling-simulation-nightly.scxml  strands-patrolling-simulation-profile.ini
strands-patrolling-simulation-nightly/tools/: strands_set_camera.py
