### Maintainer: flier[@techfak.uni-bielefeld.de] ###

cmake_minimum_required(VERSION 2.8)
PROJECT(lscp-csra-nightly)
SET(CMAKE_BUILD_TYPE distribution)

MESSAGE("-- You are building on: ${CMAKE_SYSTEM_NAME}")
MESSAGE("-- If you don't set -DCMAKE_INSTALL_PREFIX defaults are used.")

SET(PREFIX "/usr/local")
IF (CMAKE_INSTALL_PREFIX)
    SET(PREFIX ${CMAKE_INSTALL_PREFIX})
    MESSAGE("-- Found install PREFIX: " ${PREFIX})
ENDIF()

### Glob, then install the files ###
# INSTALL(PROGRAMS "${CMAKE_CURRENT_SOURCE_DIR}/tools/some_script.py" DESTINATION ${PREFIX}/bin/)
INSTALL(PROGRAMS "${CMAKE_CURRENT_SOURCE_DIR}/lsp-csra-nightly-flobimoves.ini" DESTINATION ${PREFIX}/etc/fsmt-experiments/lsp-csra-nightly/)
INSTALL(PROGRAMS "${CMAKE_CURRENT_SOURCE_DIR}/lsp-csra-nightly-flobimoves.scxml" DESTINATION ${PREFIX}/etc/fsmt-experiments/lsp-csra-nightly/)
